--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/network-interface": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/unique-device-id": "^5.28.0",
     "@ionic/angular": "^5.0.0",
     "@types/jquery": "^3.5.1",
+    "cordova-plugin-networkinterface": "^2.0.0",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -52,5 +56,11 @@
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-uniquedeviceid": {},
+      "cordova-plugin-networkinterface": {}
+    }
+  }
 }
